# blueprint

./: .env.example  AI-TRANSPARENCY.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  CREDITS.txt  DEEPSEEK.md  GEMINI.md  GPT.md  LICENSE.txt  OLLAMA.md  QWEN.md  README.md  _.gitignore  config.yaml.example  pyproject.toml
